# Barkada-Budget-Calculator

./: .gitignore  BBCConfig.h.in  CMakeLists.txt  License.txt  README.md  a.txt  account.cpp  account.h  date.cpp  date.h  debug.cpp  group_mode.cpp  group_mode.h  main.cpp  member.cpp  member.h  person_mode.cpp  person_mode.h  pmode_test.cpp  profile.cpp  profile.h  profile_test  profile_test.cpp  program.cpp  test  testcase3.c  testcase3.cpp  updates.md
ascii/: CMakeLists.txt  gmode.txt  pmode.txt
assets/: BBCIcon.rc
lib/: CMakeLists.txt  account.cpp  account.h  date.cpp  group_mode.cpp  member.cpp  member.h  person_mode.cpp  person_mode.h  profile.cpp  profile.h  screen_util.cpp  screen_util.h
profile/: CMakeLists.txt
src/: main.cpp
